@@ -1,3 +1,7 @@
+== 
+
+* Utils#load_file now properly raises error for non-existant files
+
 == 0.6.0 / 2009-12-05
 
 * minor bug fixes in interface
